Tp Integrador/bison.output
State 25 conflicts: 2 shift/reduce
State 62 conflicts: 2 shift/reduce
State 63 conflicts: 2 shift/reduce
State 122 conflicts: 2 shift/reduce
State 365 conflicts: 1 shift/reduce


Grammar

    0 $accept: unidad_de_programa $end

    1 unidad_de_programa: /* empty */
    2                   | INCLUDE unidad_de_programa
    3                   | DEFINE expresion_primaria unidad_de_programa
    4                   | unidad_de_traduccion
    5                   | error unidad_de_traduccion

    6 unidad_de_traduccion: declaracion_externa
    7                     | NO_RECONOCIDO
    8                     | unidad_de_traduccion declaracion_externa

    9 declaracion_externa: definicion_de_funcion
   10                    | declaracion

   11 definicion_de_funcion: especificadores_de_declaracion declarador lista_de_declaracion sentencia_compuesta
   12                      | declarador lista_de_declaracion sentencia_compuesta
   13                      | especificadores_de_declaracion declarador sentencia_compuesta
   14                      | declarador sentencia_compuesta

   15 declaracion: especificadores_de_declaracion lista_declaradores_init ';'
   16            | especificadores_de_declaracion ';'

   17 lista_de_declaracion: declaracion
   18                     | lista_de_declaracion declaracion

   19 especificadores_de_declaracion: especificador_categoria_almacenamiento especificadores_de_declaracion
   20                               | especificador_categoria_almacenamiento
   21                               | especificador_de_tipo especificadores_de_declaracion
   22                               | especificador_de_tipo
   23                               | calificador_de_tipo especificadores_de_declaracion
   24                               | calificador_de_tipo

   25 especificador_categoria_almacenamiento: AUTO
   26                                       | REGISTER
   27                                       | STATIC
   28                                       | EXTERN
   29                                       | TYPEDEF

   30 especificador_de_tipo: INT
   31                      | CHAR
   32                      | FLOAT
   33                      | DOUBLE
   34                      | SHORT
   35                      | VOID
   36                      | LONG
   37                      | SIGNED
   38                      | UNSIGNED
   39                      | especificador_estructura_o_union
   40                      | especificador_enum
   41                      | nombre_typedef

   42 calificador_de_tipo: CONST
   43                    | VOLATILE

   44 especificador_estructura_o_union: estructura_o_union IDENTIFICADOR '{' lista_declaraciones_struct '}'
   45                                 | estructura_o_union '{' lista_declaraciones_struct '}'
   46                                 | estructura_o_union IDENTIFICADOR

   47 estructura_o_union: STRUCT
   48                   | UNION

   49 lista_declaraciones_struct: declaracion_struct
   50                           | lista_declaraciones_struct declaracion_struct

   51 lista_declaradores_init: declarador_init
   52                        | lista_declaradores_init ',' declarador_init

   53 declarador_init: declarador
   54                | declarador '=' inicializador

   55 declaracion_struct: lista_calificador_especificador lista_declaradores_struct ';'

   56 lista_calificador_especificador: especificador_de_tipo lista_calificador_especificador
   57                                | especificador_de_tipo
   58                                | calificador_de_tipo lista_calificador_especificador
   59                                | calificador_de_tipo

   60 lista_declaradores_struct: declarador_struct
   61                          | lista_declaradores_struct ',' declarador_struct

   62 declarador_struct: declarador
   63                  | declarador ':' expresion_constante
   64                  | ':' expresion_constante

   65 especificador_enum: ENUM IDENTIFICADOR '{' lista_de_enumerador '}'
   66                   | ENUM '{' lista_de_enumerador '}'
   67                   | ENUM IDENTIFICADOR

   68 lista_de_enumerador: enumerador
   69                    | lista_de_enumerador ',' enumerador

   70 enumerador: IDENTIFICADOR
   71           | IDENTIFICADOR '=' expresion_constante

   72 declarador: apuntador declarador_directo
   73           | declarador_directo

   74 declarador_directo: IDENTIFICADOR
   75                   | '(' declarador ')'
   76                   | IDENTIFICADOR '[' expresion_constante ']'
   77                   | IDENTIFICADOR '[' ']'

   78 $@1: /* empty */

   79 declarador_directo: IDENTIFICADOR '(' $@1 lista_tipos_de_parametro ')'

   80 $@2: /* empty */

   81 declarador_directo: IDENTIFICADOR '(' $@2 lista_de_identificadores ')'
   82                   | IDENTIFICADOR '(' ')'

   83 apuntador: '*' lista_calificadores_de_tipo
   84          | '*' apuntador lista_calificadores_de_tipo
   85          | '*' apuntador
   86          | '*'

   87 lista_calificadores_de_tipo: calificador_de_tipo
   88                            | lista_calificadores_de_tipo calificador_de_tipo

   89 lista_tipos_de_parametro: lista_de_parametros
   90                         | lista_de_parametros ',' ELIPSIS

   91 lista_de_parametros: declaracion_de_parametro
   92                    | lista_de_parametros ',' declaracion_de_parametro

   93 declaracion_de_parametro: especificadores_de_declaracion declarador
   94                         | especificadores_de_declaracion declarador_abstracto
   95                         | especificadores_de_declaracion

   96 lista_de_identificadores: IDENTIFICADOR

   97 $@3: /* empty */

   98 lista_de_identificadores: IDENTIFICADOR $@3 ',' lista_de_identificadores

   99 inicializador: expresion_de_asignacion
  100              | '{' lista_de_inicializadores '}'
  101              | '{' lista_de_inicializadores ',' '}'

  102 lista_de_inicializadores: inicializador
  103                         | lista_de_inicializadores ',' inicializador

  104 nombre_de_tipo: lista_calificador_especificador declarador_abstracto
  105               | lista_calificador_especificador

  106 declarador_abstracto: apuntador
  107                     | apuntador declarador_abstracto_directo
  108                     | declarador_abstracto_directo

  109 declarador_abstracto_directo: '(' declarador_abstracto ')'
  110                             | declarador_abstracto_directo '[' expresion_constante ']'
  111                             | '[' expresion_constante ']'
  112                             | declarador_abstracto_directo '[' ']'
  113                             | '[' ']'
  114                             | declarador_abstracto_directo '(' lista_tipos_de_parametro ')'
  115                             | '(' lista_tipos_de_parametro ')'
  116                             | declarador_abstracto_directo '(' ')'
  117                             | '(' ')'

  118 nombre_typedef: 't'

  119 sentencia: sentencia_etiquetada
  120          | sentencia_expresion
  121          | sentencia_compuesta
  122          | sentencia_de_seleccion
  123          | sentencia_de_iteracion
  124          | sentencia_de_salto

  125 sentencia_etiquetada: IDENTIFICADOR ':' sentencia
  126                     | CASE expresion_constante ':' sentencia
  127                     | DEFAULT ':' sentencia

  128 sentencia_expresion: expresion ';'
  129                    | ';'

  130 sentencia_compuesta: '{' lista_de_declaracion lista_de_sentencias '}'
  131                    | '{' lista_de_sentencias '}'
  132                    | '{' lista_de_declaracion '}'
  133                    | '{' '}'

  134 lista_de_sentencias: sentencia
  135                    | lista_de_sentencias sentencia

  136 sentencia_de_seleccion: IF '(' expresion ')' sentencia
  137                       | IF '(' expresion ')' sentencia ELSE sentencia
  138                       | SWITCH '(' expresion ')' sentencia

  139 sentencia_de_iteracion: WHILE '(' expresion ')' sentencia
  140                       | DO sentencia WHILE '(' expresion ')' ';'
  141                       | FOR '(' expresion ';' expresion ';' expresion ')' sentencia
  142                       | FOR '(' expresion ';' expresion ';' ')' sentencia
  143                       | FOR '(' expresion ';' ';' expresion ')' sentencia
  144                       | FOR '(' expresion ';' ';' ')' sentencia
  145                       | FOR '(' ';' expresion ';' expresion ')' sentencia
  146                       | FOR '(' ';' expresion ';' ')' sentencia
  147                       | FOR '(' ';' ';' expresion ')' sentencia
  148                       | FOR '(' ';' ';' ')' sentencia

  149 sentencia_de_salto: GOTO IDENTIFICADOR ';'
  150                   | CONTINUE ';'
  151                   | BREAK ';'
  152                   | RETURN expresion ';'
  153                   | RETURN ';'

  154 expresion: expresion_de_asignacion
  155          | expresion ',' expresion_de_asignacion

  156 expresion_de_asignacion: expresion_condicional
  157                        | expresion_unaria operador_de_asignacion expresion_de_asignacion

  158 operador_de_asignacion: POR_IGUAL
  159                       | DIVISION_IGUAL
  160                       | MAS_IGUAL
  161                       | MENOS_IGUAL
  162                       | MODULO_IGUAL
  163                       | CORRIMIENTO_A_IZQUIERDA_IGUAL
  164                       | CORRIMIENTO_A_DERECHA_IGUAL
  165                       | Y_IGUAL
  166                       | POTENCIA_IGUAL
  167                       | O_IGUAL
  168                       | '='

  169 expresion_condicional: expresion_logica_or
  170                      | expresion_logica_or '?' expresion ':' expresion_condicional

  171 expresion_constante: expresion_condicional

  172 expresion_logica_or: expresion_logica_and
  173                    | expresion_logica_or OR_LOGICO expresion_logica_and

  174 expresion_logica_and: expresion_or_inclusivo
  175                     | expresion_logica_and AND_LOGICO expresion_or_inclusivo

  176 expresion_or_inclusivo: expresion_or_exclusivo
  177                       | expresion_or_inclusivo '|' expresion_or_exclusivo

  178 expresion_or_exclusivo: expresion_and
  179                       | expresion_or_exclusivo '^' expresion_and

  180 expresion_and: expresion_de_igualdad
  181              | expresion_and '&' expresion_de_igualdad

  182 expresion_de_igualdad: expresion_relacional
  183                      | expresion_de_igualdad IGUAL_IGUAL expresion_relacional
  184                      | expresion_de_igualdad DISTINTO expresion_relacional

  185 expresion_relacional: expresion_de_corrimiento
  186                     | expresion_relacional '<' expresion_de_corrimiento
  187                     | expresion_relacional '>' expresion_de_corrimiento
  188                     | expresion_relacional MENOR_IGUAL expresion_de_corrimiento
  189                     | expresion_relacional MAYOR_IGUAL expresion_de_corrimiento

  190 expresion_de_corrimiento: expresion_aditiva
  191                         | expresion_de_corrimiento CORRIMIENTO_A_IZQUIERDA expresion_aditiva
  192                         | expresion_de_corrimiento CORRIMIENTO_A_DERECHA expresion_aditiva

  193 expresion_aditiva: expresion_multiplicativa
  194                  | expresion_aditiva '+' expresion_multiplicativa
  195                  | expresion_aditiva '-' expresion_multiplicativa

  196 expresion_multiplicativa: expresion_cast
  197                         | expresion_multiplicativa '*' expresion_cast
  198                         | expresion_multiplicativa '/' expresion_cast
  199                         | expresion_multiplicativa '%' expresion_cast

  200 expresion_cast: expresion_unaria
  201               | '(' nombre_de_tipo ')' expresion_cast

  202 expresion_unaria: expresion_posfija
  203                 | MENOS_MENOS expresion_unaria
  204                 | MAS_MAS expresion_unaria
  205                 | operador_unario expresion_cast
  206                 | SIZEOF expresion_unaria
  207                 | SIZEOF '(' nombre_de_tipo ')'

  208 operador_unario: '&'
  209                | '*'
  210                | '+'
  211                | '-'
  212                | '~'
  213                | '!'

  214 expresion_posfija: expresion_primaria
  215                  | expresion_posfija '[' expresion ']'
  216                  | expresion_posfija '(' lista_expresiones_argumento ')'
  217                  | expresion_posfija '(' ')'
  218                  | expresion_posfija '.' IDENTIFICADOR
  219                  | expresion_posfija PUNTERO_FLECHA IDENTIFICADOR
  220                  | expresion_posfija MENOS_MENOS
  221                  | expresion_posfija MAS_MAS

  222 expresion_primaria: IDENTIFICADOR
  223                   | constante
  224                   | LITERAL_CADENA
  225                   | '(' expresion ')'

  226 lista_expresiones_argumento: expresion_de_asignacion
  227                            | lista_expresiones_argumento ',' expresion_de_asignacion

  228 constante: CONSTANTE_OCTAL
  229          | CONSTANTE_HEXADECIMAL
  230          | CONSTANTE_DECIMAL
  231          | CONSTANTE_CARACTER
  232          | CONSTANTE_REAL
  233          | ENUM


Terminals, with rules where they appear

$end (0) 0
'!' (33) 213
'%' (37) 199
'&' (38) 181 208
'(' (40) 75 79 81 82 109 114 115 116 117 136 137 138 139 140 141 142
    143 144 145 146 147 148 201 207 216 217 225
')' (41) 75 79 81 82 109 114 115 116 117 136 137 138 139 140 141 142
    143 144 145 146 147 148 201 207 216 217 225
'*' (42) 83 84 85 86 197 209
'+' (43) 194 210
',' (44) 52 61 69 90 92 98 101 103 155 227
'-' (45) 195 211
'.' (46) 218
'/' (47) 198
':' (58) 63 64 125 126 127 170
';' (59) 15 16 55 128 129 140 141 142 143 144 145 146 147 148 149 150
    151 152 153
'<' (60) 186
'=' (61) 54 71 168
'>' (62) 187
'?' (63) 170
'[' (91) 76 77 110 111 112 113 215
']' (93) 76 77 110 111 112 113 215
'^' (94) 179
't' (116) 118
'{' (123) 44 45 65 66 100 101 130 131 132 133
'|' (124) 177
'}' (125) 44 45 65 66 100 101 130 131 132 133
'~' (126) 212
error (256) 5
CONSTANTE_OCTAL (258) 228
CONSTANTE_HEXADECIMAL (259) 229
CONSTANTE_CARACTER (260) 231
IDENTIFICADOR (261) 44 46 65 67 70 71 74 76 77 79 81 82 96 98 125 149
    218 219 222
PUNTERO_FLECHA (262) 219
MAS_MAS (263) 204 221
ELIPSIS (264) 90
UNION (265) 48
ENUM (266) 65 66 67 233
VOLATILE (267) 43
CONST (268) 42
UNSIGNED (269) 38
SIGNED (270) 37
TYPEDEF (271) 29
EXTERN (272) 28
STATIC (273) 27
REGISTER (274) 26
AUTO (275) 25
INCLUDE (276) 2
DOUBLE (277) 33
SHORT (278) 34
LONG (279) 36
VOID (280) 35
FLOAT (281) 32
INT (282) 30
CHAR (283) 31
CONSTANTE_DECIMAL (284) 230
DO (285) 140
FOR (286) 141 142 143 144 145 146 147 148
SWITCH (287) 138
CONTINUE (288) 150
RETURN (289) 152 153
CASE (290) 126
DEFAULT (291) 127
SIZEOF (292) 206 207
MENOS_MENOS (293) 203 220
STRUCT (294) 47
DEFINE (295) 3
IF (296) 136 137
WHILE (297) 139 140
LITERAL_CADENA (298) 224
DISTINTO (299) 184
BREAK (300) 151
ELSE (301) 137
MAYOR_IGUAL (302) 189
MENOR_IGUAL (303) 188
IGUAL_IGUAL (304) 183
AND_LOGICO (305) 175
OR_LOGICO (306) 173
MAS_IGUAL (307) 160
MENOS_IGUAL (308) 161
POR_IGUAL (309) 158
DIVISION_IGUAL (310) 159
NO_RECONOCIDO (311) 7
MODULO_IGUAL (312) 162
CORRIMIENTO_A_IZQUIERDA_IGUAL (313) 163
CORRIMIENTO_A_DERECHA_IGUAL (314) 164
Y_IGUAL (315) 165
POTENCIA_IGUAL (316) 166
O_IGUAL (317) 167
CORRIMIENTO_A_DERECHA (318) 192
CORRIMIENTO_A_IZQUIERDA (319) 191
GOTO (320) 149
CONSTANTE_REAL (321) 232


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
unidad_de_programa (93)
    on left: 1 2 3 4 5, on right: 0 2 3
unidad_de_traduccion (94)
    on left: 6 7 8, on right: 4 5 8
declaracion_externa (95)
    on left: 9 10, on right: 6 8
definicion_de_funcion (96)
    on left: 11 12 13 14, on right: 9
declaracion (97)
    on left: 15 16, on right: 10 17 18
lista_de_declaracion (98)
    on left: 17 18, on right: 11 12 18 130 132
especificadores_de_declaracion (99)
    on left: 19 20 21 22 23 24, on right: 11 13 15 16 19 21 23 93 94
    95
especificador_categoria_almacenamiento (100)
    on left: 25 26 27 28 29, on right: 19 20
especificador_de_tipo (101)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 21 22 56
    57
calificador_de_tipo (102)
    on left: 42 43, on right: 23 24 58 59 87 88
especificador_estructura_o_union (103)
    on left: 44 45 46, on right: 39
estructura_o_union (104)
    on left: 47 48, on right: 44 45 46
lista_declaraciones_struct (105)
    on left: 49 50, on right: 44 45 50
lista_declaradores_init (106)
    on left: 51 52, on right: 15 52
declarador_init (107)
    on left: 53 54, on right: 51 52
declaracion_struct (108)
    on left: 55, on right: 49 50
lista_calificador_especificador (109)
    on left: 56 57 58 59, on right: 55 56 58 104 105
lista_declaradores_struct (110)
    on left: 60 61, on right: 55 61
declarador_struct (111)
    on left: 62 63 64, on right: 60 61
especificador_enum (112)
    on left: 65 66 67, on right: 40
lista_de_enumerador (113)
    on left: 68 69, on right: 65 66 69
enumerador (114)
    on left: 70 71, on right: 68 69
declarador (115)
    on left: 72 73, on right: 11 12 13 14 53 54 62 63 75 93
declarador_directo (116)
    on left: 74 75 76 77 79 81 82, on right: 72 73
$@1 (117)
    on left: 78, on right: 79
$@2 (118)
    on left: 80, on right: 81
apuntador (119)
    on left: 83 84 85 86, on right: 72 84 85 106 107
lista_calificadores_de_tipo (120)
    on left: 87 88, on right: 83 84 88
lista_tipos_de_parametro (121)
    on left: 89 90, on right: 79 114 115
lista_de_parametros (122)
    on left: 91 92, on right: 89 90 92
declaracion_de_parametro (123)
    on left: 93 94 95, on right: 91 92
lista_de_identificadores (124)
    on left: 96 98, on right: 81 98
$@3 (125)
    on left: 97, on right: 98
inicializador (126)
    on left: 99 100 101, on right: 54 102 103
lista_de_inicializadores (127)
    on left: 102 103, on right: 100 101 103
nombre_de_tipo (128)
    on left: 104 105, on right: 201 207
declarador_abstracto (129)
    on left: 106 107 108, on right: 94 104 109
declarador_abstracto_directo (130)
    on left: 109 110 111 112 113 114 115 116 117, on right: 107 108
    110 112 114 116
nombre_typedef (131)
    on left: 118, on right: 41
sentencia (132)
    on left: 119 120 121 122 123 124, on right: 125 126 127 134 135
    136 137 138 139 140 141 142 143 144 145 146 147 148
sentencia_etiquetada (133)
    on left: 125 126 127, on right: 119
sentencia_expresion (134)
    on left: 128 129, on right: 120
sentencia_compuesta (135)
    on left: 130 131 132 133, on right: 11 12 13 14 121
lista_de_sentencias (136)
    on left: 134 135, on right: 130 131 135
sentencia_de_seleccion (137)
    on left: 136 137 138, on right: 122
sentencia_de_iteracion (138)
    on left: 139 140 141 142 143 144 145 146 147 148, on right: 123
sentencia_de_salto (139)
    on left: 149 150 151 152 153, on right: 124
expresion (140)
    on left: 154 155, on right: 128 136 137 138 139 140 141 142 143
    144 145 146 147 152 155 170 215 225
expresion_de_asignacion (141)
    on left: 156 157, on right: 99 154 155 157 226 227
operador_de_asignacion (142)
    on left: 158 159 160 161 162 163 164 165 166 167 168, on right:
    157
expresion_condicional (143)
    on left: 169 170, on right: 156 170 171
expresion_constante (144)
    on left: 171, on right: 63 64 71 76 110 111 126
expresion_logica_or (145)
    on left: 172 173, on right: 169 170 173
expresion_logica_and (146)
    on left: 174 175, on right: 172 173 175
expresion_or_inclusivo (147)
    on left: 176 177, on right: 174 175 177
expresion_or_exclusivo (148)
    on left: 178 179, on right: 176 177 179
expresion_and (149)
    on left: 180 181, on right: 178 179 181
expresion_de_igualdad (150)
    on left: 182 183 184, on right: 180 181 183 184
expresion_relacional (151)
    on left: 185 186 187 188 189, on right: 182 183 184 186 187 188
    189
expresion_de_corrimiento (152)
    on left: 190 191 192, on right: 185 186 187 188 189 191 192
expresion_aditiva (153)
    on left: 193 194 195, on right: 190 191 192 194 195
expresion_multiplicativa (154)
    on left: 196 197 198 199, on right: 193 194 195 197 198 199
expresion_cast (155)
    on left: 200 201, on right: 196 197 198 199 201 205
expresion_unaria (156)
    on left: 202 203 204 205 206 207, on right: 157 200 203 204 206
operador_unario (157)
    on left: 208 209 210 211 212 213, on right: 205
expresion_posfija (158)
    on left: 214 215 216 217 218 219 220 221, on right: 202 215 216
    217 218 219 220 221
expresion_primaria (159)
    on left: 222 223 224 225, on right: 3 214
lista_expresiones_argumento (160)
    on left: 226 227, on right: 216 227
constante (161)
    on left: 228 229 230 231 232 233, on right: 223


state 0

    0 $accept: . unidad_de_programa $end

    error          shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    UNION          shift, and go to state 3
    ENUM           shift, and go to state 4
    VOLATILE       shift, and go to state 5
    CONST          shift, and go to state 6
    UNSIGNED       shift, and go to state 7
    SIGNED         shift, and go to state 8
    TYPEDEF        shift, and go to state 9
    EXTERN         shift, and go to state 10
    STATIC         shift, and go to state 11
    REGISTER       shift, and go to state 12
    AUTO           shift, and go to state 13
    INCLUDE        shift, and go to state 14
    DOUBLE         shift, and go to state 15
    SHORT          shift, and go to state 16
    LONG           shift, and go to state 17
    VOID           shift, and go to state 18
    FLOAT          shift, and go to state 19
    INT            shift, and go to state 20
    CHAR           shift, and go to state 21
    STRUCT         shift, and go to state 22
    DEFINE         shift, and go to state 23
    NO_RECONOCIDO  shift, and go to state 24
    '*'            shift, and go to state 25
    '('            shift, and go to state 26
    't'            shift, and go to state 27

    $end  reduce using rule 1 (unidad_de_programa)

    unidad_de_programa                      go to state 28
    unidad_de_traduccion                    go to state 29
    declaracion_externa                     go to state 30
    definicion_de_funcion                   go to state 31
    declaracion                             go to state 32
    especificadores_de_declaracion          go to state 33
    especificador_categoria_almacenamiento  go to state 34
    especificador_de_tipo                   go to state 35
    calificador_de_tipo                     go to state 36
    especificador_estructura_o_union        go to state 37
    estructura_o_union                      go to state 38
    especificador_enum                      go to state 39
    declarador                              go to state 40
    declarador_directo                      go to state 41
    apuntador                               go to state 42
    nombre_typedef                          go to state 43


state 1

    5 unidad_de_programa: error . unidad_de_traduccion

    IDENTIFICADOR  shift, and go to state 2
    UNION          shift, and go to state 3
    ENUM           shift, and go to state 4
    VOLATILE       shift, and go to state 5
    CONST          shift, and go to state 6
    UNSIGNED       shift, and go to state 7
    SIGNED         shift, and go to state 8
    TYPEDEF        shift, and go to state 9
    EXTERN         shift, and go to state 10
    STATIC         shift, and go to state 11
    REGISTER       shift, and go to state 12
    AUTO           shift, and go to state 13
    DOUBLE         shift, and go to state 15
    SHORT          shift, and go to state 16
    LONG           shift, and go to state 17
    VOID           shift, and go to state 18
    FLOAT          shift, and go to state 19
    INT            shift, and go to state 20
    CHAR           shift, and go to state 21
    STRUCT         shift, and go to state 22
    NO_RECONOCIDO  shift, and go to state 24
    '*'            shift, and go to state 25
    '('            shift, and go to state 26
    't'            shift, and go to state 27

    unidad_de_traduccion                    go to state 44
    declaracion_externa                     go to state 30
    definicion_de_funcion                   go to state 31
    declaracion                             go to state 32
    especificadores_de_declaracion          go to state 33
    especificador_categoria_almacenamiento  go to state 34
    especificador_de_tipo                   go to state 35
    calificador_de_tipo                     go to state 36
    especificador_estructura_o_union        go to state 37
    estructura_o_union                      go to state 38
    especificador_enum                      go to state 39
    declarador                              go to state 40
    declarador_directo                      go to state 41
    apuntador                               go to state 42
    nombre_typedef                          go to state 43


state 2

   74 declarador_directo: IDENTIFICADOR .
   76                   | IDENTIFICADOR . '[' expresion_constante ']'
   77                   | IDENTIFICADOR . '[' ']'
   79                   | IDENTIFICADOR . '(' $@1 lista_tipos_de_parametro ')'
   81                   | IDENTIFICADOR . '(' $@2 lista_de_identificadores ')'
   82                   | IDENTIFICADOR . '(' ')'

    '('  shift, and go to state 45
    '['  shift, and go to state 46

    $default  reduce using rule 74 (declarador_directo)


state 3

   48 estructura_o_union: UNION .

    $default  reduce using rule 48 (estructura_o_union)


state 4

   65 especificador_enum: ENUM . IDENTIFICADOR '{' lista_de_enumerador '}'
   66                   | ENUM . '{' lista_de_enumerador '}'
   67                   | ENUM . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 47
    '{'            shift, and go to state 48


state 5

   43 calificador_de_tipo: VOLATILE .

    $default  reduce using rule 43 (calificador_de_tipo)


state 6

   42 calificador_de_tipo: CONST .

    $default  reduce using rule 42 (calificador_de_tipo)


state 7

   38 especificador_de_tipo: UNSIGNED .

    $default  reduce using rule 38 (especificador_de_tipo)


state 8

   37 especificador_de_tipo: SIGNED .

    $default  reduce using rule 37 (especificador_de_tipo)


state 9

   29 especificador_categoria_almacenamiento: TYPEDEF .

    $default  reduce using rule 29 (especificador_categoria_almacenamiento)


state 10

   28 especificador_categoria_almacenamiento: EXTERN .

    $default  reduce using rule 28 (especificador_categoria_almacenamiento)


state 11

   27 especificador_categoria_almacenamiento: STATIC .

    $default  reduce using rule 27 (especificador_categoria_almacenamiento)


state 12

   26 especificador_categoria_almacenamiento: REGISTER .

    $default  reduce using rule 26 (especificador_categoria_almacenamiento)


state 13

   25 especificador_categoria_almacenamiento: AUTO .

    $default  reduce using rule 25 (especificador_categoria_almacenamiento)


state 14

    2 unidad_de_programa: INCLUDE . unidad_de_programa

    error          shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2
    UNION          shift, and go to state 3
    ENUM           shift, and go to state 4
    VOLATILE       shift, and go to state 5
    CONST          shift, and go to state 6
    UNSIGNED       shift, and go to state 7
    SIGNED         shift, and go to state 8
    TYPEDEF        shift, and go to state 9
    EXTERN         shift, and go to state 10
    STATIC         shift, and go to state 11
    REGISTER       shift, and go to state 12
    AUTO           shift, and go to state 13
    INCLUDE        shift, and go to state 14
    DOUBLE         shift, and go to state 15
    SHORT          shift, and go to state 16
    LONG           shift, and go to state 17
    VOID           shift, and go to state 18
    FLOAT          shift, and go to state 19
    INT            shift, and go to state 20
    CHAR           shift, and go to state 21
    STRUCT         shift, and go to state 22
    DEFINE         shift, and go to state 23
    NO_RECONOCIDO  shift, and go to state 24
    '*'            shift, and go to state 25
    '('            shift, and go to state 26
    't'            shift, and go to state 27

    $end  reduce using rule 1 (unidad_de_programa)

    unidad_de_programa                      go to state 49
    unidad_de_traduccion                    go to state 29
    declaracion_externa                     go to state 30
    definicion_de_funcion                   go to state 31
    declaracion                             go to state 32
    especificadores_de_declaracion          go to state 33
    especificador_categoria_almacenamiento  go to state 34
    especificador_de_tipo                   go to state 35
    calificador_de_tipo                     go to state 36
    especificador_estructura_o_union        go to state 37
    estructura_o_union                      go to state 38
    especificador_enum                      go to state 39
    declarador                              go to state 40
    declarador_directo                      go to state 41
    apuntador                               go to state 42
    nombre_typedef                          go to state 43


state 15

   33 especificador_de_tipo: DOUBLE .

    $default  reduce using rule 33 (especificador_de_tipo)


state 16

   34 especificador_de_tipo: SHORT .

    $default  reduce using rule 34 (especificador_de_tipo)


state 17

   36 especificador_de_tipo: LONG .

    $default  reduce using rule 36 (especificador_de_tipo)


state 18

   35 especificador_de_tipo: VOID .

    $default  reduce using rule 35 (especificador_de_tipo)


state 19

   32 especificador_de_tipo: FLOAT .

    $default  reduce using rule 32 (especificador_de_tipo)


state 20

   30 especificador_de_tipo: INT .

    $default  reduce using rule 30 (especificador_de_tipo)


state 21

   31 especificador_de_tipo: CHAR .

    $default  reduce using rule 31 (especificador_de_tipo)


state 22

   47 estructura_o_union: STRUCT .

    $default  reduce using rule 47 (estructura_o_union)


state 23

    3 unidad_de_programa: DEFINE . expresion_primaria unidad_de_programa

    CONSTANTE_OCTAL        shift, and go to state 50
    CONSTANTE_HEXADECIMAL  shift, and go to state 51
    CONSTANTE_CARACTER     shift, and go to state 52
    IDENTIFICADOR          shift, and go to state 53
    ENUM                   shift, and go to state 54
    CONSTANTE_DECIMAL      shift, and go to state 55
    LITERAL_CADENA         shift, and go to state 56
    CONSTANTE_REAL         shift, and go to state 57
    '('                    shift, and go to state 58

    expresion_primaria  go to state 59
    constante           go to state 60


state 24

    7 unidad_de_traduccion: NO_RECONOCIDO .

    $default  reduce using rule 7 (unidad_de_traduccion)


state 25

   83 apuntador: '*' . lista_calificadores_de_tipo
   84          | '*' . apuntador lista_calificadores_de_tipo
   85          | '*' . apuntador
   86          | '*' .

    VOLATILE  shift, and go to state 5
    CONST     shift, and go to state 6
    '*'       shift, and go to state 25

    VOLATILE  [reduce using rule 86 (apuntador)]
    CONST     [reduce using rule 86 (apuntador)]
    $default  reduce using rule 86 (apuntador)

    calificador_de_tipo          go to state 61
    apuntador                    go to state 62
    lista_calificadores_de_tipo  go to state 63


state 26

   75 declarador_directo: '(' . declarador ')'

    IDENTIFICADOR  shift, and go to state 2
    '*'            shift, and go to state 25
    '('            shift, and go to state 26

    declarador          go to state 64
    declarador_directo  go to state 41
    apuntador           go to state 42


state 27

  118 nombre_typedef: 't' .

    $default  reduce using rule 118 (nombre_typedef)


state 28

    0 $accept: unidad_de_programa . $end

    $end  shift, and go to state 65


state 29

    4 unidad_de_programa: unidad_de_traduccion .
    8 unidad_de_traduccion: unidad_de_traduccion . declaracion_externa

    IDENTIFICADOR  shift, and go to state 2
    UNION          shift, and go to state 3
    ENUM           shift, and go to state 4
    VOLATILE       shift, and go to state 5
    CONST          shift, and go to state 6
    UNSIGNED       shift, and go to state 7
    SIGNED         shift, and go to state 8
    TYPEDEF        shift, and go to state 9
    EXTERN         shift, and go to state 10
    STATIC         shift, and go to state 11
    REGISTER       shift, and go to state 12
    AUTO           shift, and go to state 13
    DOUBLE         shift, and go to state 15
    SHORT          shift, and go to state 16
    LONG           shift, and go to state 17
    VOID           shift, and go to state 18
    FLOAT          shift, and go to state 19
    INT            shift, and go to state 20
    CHAR           shift, and go to state 21
    STRUCT         shift, and go to state 22
    '*'            shift, and go to state 25
    '('            shift, and go to state 26
    't'            shift, and go to state 27

    $default  reduce using rule 4 (unidad_de_programa)

    declaracion_externa                     go to state 66
    definicion_de_funcion                   go to state 31
    declaracion                             go to state 32
    especificadores_de_declaracion          go to state 33
    especificador_categoria_almacenamiento  go to state 34
    especificador_de_tipo                   go to state 35
    calificador_de_tipo                     go to state 36
    especificador_estructura_o_union        go to state 37
    estructura_o_union                      go to state 38
    especificador_enum                      go to state 39
    declarador                              go to state 40
    declarador_directo                      go to state 41
    apuntador                               go to state 42
    nombre_typedef                          go to state 43


state 30

    6 unidad_de_traduccion: declaracion_externa .

    $default  reduce using rule 6 (unidad_de_traduccion)


state 31

    9 declaracion_externa: definicion_de_funcion .

    $default  reduce using rule 9 (declaracion_externa)


state 32

   10 declaracion_externa: declaracion .

    $default  reduce using rule 10 (declaracion_externa)


state 33

   11 definicion_de_funcion: especificadores_de_declaracion . declarador lista_de_declaracion sentencia_compuesta
   13                      | especificadores_de_declaracion . declarador sentencia_compuesta
   15 declaracion: especificadores_de_declaracion . lista_declaradores_init ';'
   16            | especificadores_de_declaracion . ';'

    IDENTIFICADOR  shift, and go to state 2
    '*'            shift, and go to state 25
    ';'            shift, and go to state 67
    '('            shift, and go to state 26

    lista_declaradores_init  go to state 68
    declarador_init          go to state 69
    declarador               go to state 70
    declarador_directo       go to state 41
    apuntador                go to state 42


state 34

   19 especificadores_de_declaracion: especificador_categoria_almacenamiento . especificadores_de_declaracion
   20                               | especificador_categoria_almacenamiento .

    UNION     shift, and go to state 3
    ENUM      shift, and go to state 4
    VOLATILE  shift, and go to state 5
    CONST     shift, and go to state 6
    UNSIGNED  shift, and go to state 7
    SIGNED    shift, and go to state 8
    TYPEDEF   shift, and go to state 9
    EXTERN    shift, and go to state 10
    STATIC    shift, and go to state 11
    REGISTER  shift, and go to state 12
    AUTO      shift, and go to state 13
    DOUBLE    shift, and go to state 15
    SHORT     shift, and go to state 16
    LONG      shift, and go to state 17
    VOID      shift, and go to state 18
    FLOAT     shift, and go to state 19
    INT       shift, and go to state 20
    CHAR      shift, and go to state 21
    STRUCT    shift, and go to state 22
    't'       shift, and go to state 27

    $default  reduce using rule 20 (especificadores_de_declaracion)

    especificadores_de_declaracion          go to state 71
    especificador_categoria_almacenamiento  go to state 34
    especificador_de_tipo                   go to state 35
    calificador_de_tipo                     go to state 36
    especificador_estructura_o_union        go to state 37
    estructura_o_union                      go to state 38
    especificador_enum                      go to state 39
